--- a/actions/run-tests/action.yaml
+++ b/actions/run-tests/action.yaml
@@ -9,7 +9,7 @@ inputs:
     required: true
     default: false
   codecov-upload:
-    description: Upload coverage report to codecov.
+    description: Deprecated. Upload coverage report to codecov.
     required: true
     default: false
 runs:
@@ -25,7 +25,7 @@ runs:
           python3 "$GITHUB_ACTION_PATH/../../scripts/run_tests.py" "$PACKAGE"
         fi
       shell: bash
-    - if: inputs.codecov-upload == 'true'
+    - if: inputs.coverage == 'true'
       run: |
         if [ -f ./.coverage ]; then
           pip3 install coverage==4.5.4
@@ -33,6 +33,9 @@ runs:
         fi
       shell: bash
     - if: inputs.codecov-upload == 'true'
+      run:
+        echo "The setting `codecov-upload` is deprecated."
+        echo "Please call the action `codecov/codecov-action` directly".
+      shell: bash
+    - if: inputs.codecov-upload == 'true'
       uses: codecov/codecov-action@v3
-      with:
-        token: ${{secrets.CODECOV_TOKEN}}
