--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,10 +34,10 @@ jobs:
           install-unittesting: false
       - uses: "./actions/run-tests"
         with:
-          coverage: true
-      - uses: codecov/codecov-action@v4
-        with:
-          token: ${{secrets.CODECOV_TOKEN}}
+          coverage: false
+      # - uses: codecov/codecov-action@v4
+      #   with:
+      #     token: ${{secrets.CODECOV_TOKEN}}
 
   test-actions:  # with latest released unittesting
     strategy:
