Exclude sbin/scripts from sublime-package
Files in sbin and scripts directory are for dedicated use by CI runners.

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,5 +12,7 @@
 /.gitignore                 export-ignore
 /actions/                   export-ignore
 /docker/                    export-ignore
+/sbin/                      export-ignore
+/scripts/                   export-ignore
 /tests/                     export-ignore
 /unittesting.json           export-ignore
