--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@
 # operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile ~/.gitignore_global
 
+# python
+.venv/
 *.pyc
+
+# coverage
 .coverage
+coverage.xml
+htmlcov/
+
+# vagrant
 .vagrant
