Deprecate coverage action inputs
They are no longer used.

1. To generate code coverage reports latest available coverage package
   is installed as library by ST (requires Package Control!). 
   Coverage reports are created from within ST's plugin environment.
2. Coverage reports are to be uploaded via via codecov action, which has to
   deal with installing required coverage python packages itself.

--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -29,11 +29,11 @@ inputs:
     required: false
     default: ''
   install-coverage:
-    description: Whether to install coverage.
+    description: Whether to install coverage (DEPRECATED, no longer used).
     required: true
     default: true
   coverage-version:
-    description: Version of coverage. Use latest release if empty.
+    description: Version of coverage (DEPRECATED, no longer used).
     required: false
     default: ''
   install-package-control:
