--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,8 +35,7 @@ jobs:
       - uses: "./actions/run-tests"
         with:
           coverage: true
-      - if: runner.os == 'Windows' || runner.os == 'Linux'
-        uses: codecov/codecov-action@v4
+      - uses: codecov/codecov-action@v4
         with:
           token: ${{secrets.CODECOV_TOKEN}}
 
