--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -21,11 +21,11 @@ inputs:
     required: true
     default: './'
   install-unittesting:
-    description: Whether to install UnitTesting.
+    description: Whether to install UnitTesting (DEPRECATED, replaced by SublimeText/UnitTesting/actions/setup@ref).
     required: true
     default: true
   unittesting-version:
-    description: Version of UnitTesting. Use latest release if empty.
+    description: Version of UnitTesting (DEPRECATED, replaced by SublimeText/UnitTesting/actions/setup@ref).
     required: false
     default: ''
   install-coverage:
@@ -186,7 +186,7 @@ runs:
           cd "${{ inputs.package-path }}"
           if [ -d "./.git" ] && [ ! -d "$SUBLIME_TEXT_PACKAGES/$PACKAGE" ]; then
               # symlink does not play well with coverage
-              echo "copy the package to sublime package directory"
+              echo "Copy checked out package '$PACKAGE' to $SUBLIME_TEXT_PACKAGES/$PACKAGE"
               mkdir -p "$SUBLIME_TEXT_PACKAGES/$PACKAGE"
               cp -r ./ "$SUBLIME_TEXT_PACKAGES/$PACKAGE"
               # detached head will crash package control
@@ -194,10 +194,8 @@ runs:
           fi
           cd -
         fi
-        if [ "${{ inputs.install-unittesting }}" = "true" ]; then
-            InstallPackage "UnitTesting" "https://github.com/SublimeText/UnitTesting" "${{ inputs.unittesting-version }}"
-        fi
 
+        # Install extra packages to to Packages/<Package>
         while read -r x; do
             if [[ "$x" =~ ^(.*):(.*)/([^@]*)@?(.*)$ ]]; then
                 PKG="${BASH_REMATCH[1]}"
@@ -214,6 +212,13 @@ runs:
             fi
             InstallPackage "$PKG" "https://github.com/$USER/$REPO" "$SHA"
         done <<< "${{ inputs.extra-packages }}"
+
+        # Install UnitTesting to Packages/UnitTesting if not yet exists
+        if [ ! -d "$SUBLIME_TEXT_PACKAGES/UnitTesting" ]; then
+            echo "Copy action's 'UnitTesting' to $SUBLIME_TEXT_PACKAGES/UnitTesting"
+            mkdir -p "$SUBLIME_TEXT_PACKAGES/UnitTesting"
+            cp -r "$GITHUB_ACTION_PATH/../../" "$SUBLIME_TEXT_PACKAGES/UnitTesting"
+        fi
       shell: bash
     - name: Install Package Control
       if: (runner.os == 'Linux' || runner.os == 'macOS') && inputs.install-package-control == 'true'
