--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,12 +31,10 @@ jobs:
       - uses: "./actions/setup"
         with:
           sublime-text-version: ${{ matrix.st-version }}
-          install-unittesting: false
       - uses: "./actions/run-tests"
         with:
           coverage: true
-      - if: runner.os == 'Windows' || runner.os == 'Linux'
-        uses: codecov/codecov-action@v4
+      - uses: codecov/codecov-action@v4
         with:
           token: ${{secrets.CODECOV_TOKEN}}
 
@@ -62,8 +60,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: SublimeText/UnitTesting/actions/setup@v1
-        with:
-          install-unittesting: false
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
 
   test-as-extra-package:
@@ -83,7 +79,6 @@ jobs:
       - uses: "./UnitTesting/actions/setup"
         with:
           package-path: UnitTesting-example
-          install-unittesting: false
           extra-packages: |
             SublimeText/UnitTesting
       - uses: "./UnitTesting/actions/run-tests"
